# ElbowEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Git注释功能标签.md  README.md  TODO.md  main.cpp  vcpkg.json
CodeGenerator/: .clang-format  CMakeLists.txt  CodeGenerator.py  Config.json  Object.h  ReflectedEntityFinder.cpp  ReflectedEntityFinder.h  Test.cpp  Test.generated.h  Test.generated.hpp  Test.h  main.cpp  vcpkg.json
CodeGenerator/Test/: CoreDefs.h  Object.cpp  Object.h  Test.generated.h  Test.h
Engine/: CMakeLists.txt  MemoryPool_ID.csv
Engine/Core/: Assert.cpp  Assert.h  Assert.hpp  CMakeLists.txt  CachedString.cpp  CachedString.h  Core.cpp  Core.h  Core.hpp  CoreDef.cpp  CoreDef.h  CoreEvents.h  CoreFeature.hpp  CoreGlobal.cpp  CoreGlobal.h  CoreMacro.h  CoreMacros.hpp  CoreTypeTraits.h  Features.h  PlatformDef.hpp  Profile.hpp  TypeAlias.hpp  TypeTraits.hpp
Engine/Core/Async/: ConcurrentQueue.h  ConcurrentQueue.hpp  Future.h  Future.hpp  IRunnable.h  IRunnable.hpp  ITask.h  Promise.h  Promise.hpp  Thread.cpp  Thread.h  Thread.hpp  ThreadCluster.cpp  ThreadCluster.h  ThreadManager.cpp  ThreadManager.h  ThreadManager.hpp  ThreadSafeQueue.cpp  ThreadSafeQueue.h  ThreadUtils.cpp  ThreadUtils.h
Engine/Core/Base/: ArrayMap.cpp  ArrayMap.h  ArrayProxy.cpp  ArrayProxy.h  Base.h  CallStackFrame.cpp  CallStackFrame.h  CoreTypeDef.h  EString.cpp  EString.h  Exception.cpp  Exception.h  FlatMap.h  Interface.h  Optional.h  Ranges.cpp  Ranges.h  Ref.h  SystemInfo.cpp  SystemInfo.h  TagInvoke.h  Tree.cpp  Tree.h  TypeList.h  TypeTraits.h  UniquePtr.cpp  UniquePtr.h
Engine/Core/Collection/: Array.hpp  Map.hpp  StaticArray.hpp  Tree.hpp
Engine/Core/Config/: ConfigManager.cpp  ConfigManager.h  ConfigManager.hpp  CoreConfig.cpp  CoreConfig.h  CoreConfig.hpp  EngineInfoConfig.cpp  EngineInfoConfig.h  IConfig.cpp  IConfig.h  IConfig.hpp
Engine/Core/Event/: Delegate.h  Event.h  Event.hpp
Engine/Core/Exception/: Exception.cpp  Exception.h
Engine/Core/FileSystem/: File.cpp  File.h  File.hpp  FileSystemEnum.h  Folder.cpp  Folder.hpp  Path.cpp  Path.hpp  Paths.cpp  Paths.h
Engine/Core/Interface/: IStringify.h
Engine/Core/Log/: CoreLogCategory.h  LogEvent.cpp  LogEvent.h  LogRecorder.cpp  LogRecorder.h  Logger.cpp  Logger.h
Engine/Core/Logger/: Logger.cpp  Logger.hpp  VLog.cpp  VLog.hpp
Engine/Core/Manager/: MManager.cpp  MManager.hpp  Manager.hpp  Singleton.hpp
Engine/Core/Math/: Color.cpp  Color.hpp  Constants.hpp  Math.cpp  Math.h  Math.hpp  MathExtensions.cpp  MathExtensions.hpp  MathFunctional.cpp  MathFunctional.h  MathPipe.cpp  MathPipe.h  MathTypes.cpp  MathTypes.h  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Rect.cpp  Rect.hpp  Rotator.cpp  Rotator.hpp  Types.cpp  Types.hpp  Vector.cpp  Vector.hpp
Engine/Core/Memory/: DoubleFrameAllocator.cpp  DoubleFrameAllocator.h  FrameAllocator.cpp  FrameAllocator.h  FrameAllocator.hpp  Malloc.hpp  Memory.hpp  MemoryManager.cpp  MemoryManager.h  MemoryPool.cpp  MemoryPool.h  New.hpp
Engine/Core/Misc/: Guid.cpp  Guid.h  Optional.hpp  Other.hpp  SharedPtr.hpp  SystemInfo.cpp  SystemInfo.hpp  UniquePtr.hpp  Vertex.cpp  Vertex.h
Engine/Core/Object/: Object.cpp  Object.h  Object.hpp  ObjectManager.cpp  ObjectManager.h  ObjectManager.hpp  ObjectPtr.cpp  ObjectPtr.h  ObjectPtr.hpp  ObjectRegistry.cpp  ObjectRegistry.h  PersistentObject.cpp  PersistentObject.h  PersistentObject.hpp  Setting.cpp  Setting.h
Engine/Core/Path/: Exception.cpp  Exception.h  Path.cpp  Path.h
Engine/Core/Profiler/: ProfileMacro.cpp  ProfileMacro.h
Engine/Core/Reflection/: Any.cpp  Any.h  Any.hpp  ContainerView.cpp  ContainerView.h  ContainerView.hpp  CtorManager.cpp  CtorManager.h  Field.cpp  Field.hpp  Helper.cpp  Helper.hpp  ITypeGetter.cpp  ITypeGetter.h  MetaInfoMacro.h  MetaInfoManager.cpp  MetaInfoManager.h  ReflManager.cpp  ReflManager.hpp  Reflection.cpp  Reflection.h  Reflection.hpp  SharedAny.cpp  SharedAny.h  SharedAny.hpp  Type.cpp  Type.hpp
Engine/Core/Serialization/: Archive.cpp  Archive.h  Archive.hpp  ISerializer.cpp  ISerializer.h  Interfaces.h  TestSerialization.cpp  TestSerialization.h  XMLArchive.cpp  XMLArchive.hpp  YamlArchive.cpp  YamlArchive.h  YamlArchive.hpp  YamlDeserializer.cpp  YamlDeserializer.h  YamlSerializer.cpp  YamlSerializer.h
Engine/Core/Singleton/: MManager.cpp  MManager.h  Singleton.h
Engine/Core/String/: String.cpp  String.hpp
Engine/Core/Test/: TestMetaInfoGenerate.cpp  TestMetaInfoGenerate.h
Engine/Core/Utils/: ContainerUtils.cpp  ContainerUtils.h  HashUtils.cpp  HashUtils.h  MemoryUtils.cpp  MemoryUtils.h  PathUtils.cpp  PathUtils.h  ReflUtils.cpp  ReflUtils.h  StringUtils.cpp  StringUtils.h  TimeUtils.cpp  TimeUtils.h  TypeUtils.cpp  TypeUtils.h
Engine/Func/: CMakeLists.txt  Logcat.h
Engine/Func/Algo/: RectPacking.cpp  RectPacking.h
Engine/Func/Camera/: ACameraHolder.cpp  ACameraHolder.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h
Engine/Func/Config/: FuncConfig.cpp  FuncConfig.hpp
Engine/Func/Input/: Input.cpp  Input.h  Input.hpp
Engine/Func/Render/: ElbowEngineRenderPipeline.cpp  ElbowRenderPipeline.cpp  ElbowRenderPipeline.h  FixedBasicTestRenderPipeline.cpp  FixedBasicTestRenderPipeline.h  GlobalObjectInstancedDataBuffer.cpp  GlobalObjectInstancedDataBuffer.h  Helper.cpp  Misc.cpp  (+12 more)
Engine/Function/: CMakeLists.txt  FunctionCommon.h
Engine/Platform/: CMakeLists.txt  ImGuiContextProxy.cpp  ImGuiContextProxy.hpp  PlatformCommon.h  PlatformDefines.h  PlatformEvents.h  PlatformLogcat.h
Engine/Resource/: Algo.cpp  Algo.hpp  AssetDataBase.cpp  AssetDataBase.h  AssetDataBase.hpp  AssetType.cpp  AssetType.h  AssetType.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Logcat.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Project.cpp  Project.h  Project.hpp  ResourceCommon.h  ResourceConfig.h  ResourceManager.cpp  ResourceManager.h  SQLHelper.cpp  SQLHelper.h  SQLHelper.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
Engine/Test/: CMakeLists.txt
Engine/Tool/: CMakeLists.txt  EngineApplication.cpp  EngineApplication.h  ToolCommon.h
(+630 files in other folders)
